# simple_cam

./: README.md  TODO  meson.build  public_streams.txt  rtsp_url_list.txt
data/: cams.xml  gresource.xml
src/: add_cam_dialog.vala  add_cam_dialog.vala.old  add_cam_url_dialog.vala  application.vala  cam_tree_store.vala  cam_widget.vala  main.vala  main_window.vala
ui/: add_cam_dialog.ui  add_cam_dialog.ui.old  add_cam_dialog.ui~  add_cam_dialog_2.ui.old  add_cam_dialog_2.ui~  add_cam_url_dialog.ui  add_cam_url_dialog.ui~  main_window.ui  main_window.ui~
